--- a/src/pages/Signup.css
+++ b/src/pages/Signup.css
@@ -1,9 +1,16 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
 .signup-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    background: linear-gradient(135deg, #ffecd2 0%, #fcb69f 100%);
+    overflow-x: hidden;
+    /* height: 100vh; */
+    /* width: 100vw; */
+    /* background: linear-gradient(135deg, #ffecd2 0%, #fcb69f 100%); */
   }
   
   .signup-form {
@@ -22,7 +29,7 @@
   }
   
   .signup-input {
-    width: 100%;
+    width: 90%;
     padding: 12px 15px;
     margin-bottom: 20px;
     border: 1px solid #ccc;
@@ -39,7 +46,7 @@
   .signup-button {
     width: 100%;
     padding: 12px;
-    background-color: #e67e22;
+    background-color: #3498db;
     border: none;
     border-radius: 8px;
     color: #ffffff;
